<resources>
    <string name="app_name">kakaotalk</string>
    <string name="friendText">친구</string>
    <string name="myName">이재현</string>
    <string name="upDateFriends">업데이트한 친구</string>
    <string name="textChaanel">채널</string>

    <string name="desText">카카오톡 클론 코딩</string>
    <string name="chatText">1:1 채팅</string>
    <string name="vocieText">보이스톡</string>
    <string name="faceTalkText">페이스톡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channelTextText">채널 이름</string>
</resources>