<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/friendText"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/personSearchButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/noBackground"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintRight_toLeftOf="@+id/personAddPeopleButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/personAddPeopleButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_person_add_alt_1_24"
            app:layout_constraintRight_toLeftOf="@+id/personSettingButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/personSettingButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/seperateView"
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friend" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/friend">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <Button
                    android:id="@+id/mainPersonProfile"
                    android:layout_width="400dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/noBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profileImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="@+id/mainPersonProfile"
                    app:layout_constraintStart_toStartOf="@+id/mainPersonProfile"
                    app:layout_constraintTop_toTopOf="@+id/mainPersonProfile" />

                <TextView
                    android:id="@+id/profileText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/myName"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                    app:layout_constraintLeft_toRightOf="@+id/profileImg"
                    app:layout_constraintTop_toTopOf="@+id/profileImg" />

                <View
                    android:id="@+id/seperateView2"
                    android:layout_width="400dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainPersonProfile" />

                <TextView
                    android:id="@+id/upDateCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/upDateFriends"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seperateView2" />
                <TextView
                    android:id="@+id/upDateCountNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6"
                    app:layout_constraintStart_toEndOf="@+id/upDateCountText"
                    app:layout_constraintBottom_toBottomOf="@+id/upDateCountText"
                    app:layout_constraintTop_toTopOf="@+id/upDateCountText"
                    android:layout_marginStart="5dp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upDateProfileRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/upDateCountText" />

                <View
                    android:id="@+id/seperateView3"
                    android:layout_width="400dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upDateProfileRecyclerView" />

                <TextView
                    android:id="@+id/channelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/textChaanel"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seperateView3" />

                <Button
                    android:id="@+id/channelButton"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@color/noBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/channelText" />

                <ImageView
                    android:id="@+id/channelImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="@+id/channelButton"
                    app:layout_constraintStart_toStartOf="@+id/channelButton"
                    app:layout_constraintTop_toTopOf="@+id/channelButton" />

                <TextView
                    android:id="@+id/channelText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/textChaanel"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/channelImageView"
                    app:layout_constraintStart_toEndOf="@+id/channelImageView"
                    app:layout_constraintTop_toTopOf="@+id/channelImageView" />

                <View
                    android:id="@+id/seperateView4"
                    android:layout_width="400dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/channelButton" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profileRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/seperateView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
